--- a/app/src/main/res/layout/rv_dialog_item.xml
+++ b/app/src/main/res/layout/rv_dialog_item.xml
@@ -47,9 +47,9 @@
                     android:id="@+id/rv_item_dialog_currency_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="@dimen/itemMarginDefault"
                     android:fontFamily="@font/open_sans_bold"
-                    android:text="@{currency.curName}"
+                    android:textNameLocale="@{currency}"
                     android:textColor="@color/textDarkGrey"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
