--- a/app/src/main/res/layout/rv_item_converter.xml
+++ b/app/src/main/res/layout/rv_item_converter.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="96dp"
             android:layout_margin="0dp"
+            app:cardBackgroundColor="@android:color/transparent"
             app:cardElevation="0dp"
             app:cardMaxElevation="0dp">
 
@@ -28,6 +29,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@{currency.symbol}"
+                    android:layout_marginStart="@dimen/itemMarginDefault"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -38,9 +40,9 @@
                     android:id="@+id/currency_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="@dimen/itemMarginDefault"
                     android:fontFamily="@font/open_sans_bold"
-                    android:text="@{currency.curName}"
+                    android:textNameLocale="@{currency}"
                     android:textColor="@color/textDarkGrey"
                     android:textSize="14sp"
                     app:layout_constraintStart_toEndOf="@+id/imageViewConv"
@@ -51,7 +53,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans_semibold"
-                    android:textLocale="@{currency}"
+                    android:textQuotLocale="@{currency}"
                     android:textColor="@color/textLightGrey"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="@+id/currency_name"
@@ -66,6 +68,7 @@
                     app:boxBackgroundMode="outline"
                     app:boxBackgroundColor="@color/elementsBackground"
                     app:hintEnabled="false"
+                    android:layout_marginEnd="@dimen/itemMarginDefault"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
