--- a/app/src/main/res/color/text_layout_border_color.xml
+++ b/app/src/main/res/color/text_layout_border_color.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="#fff" android:state_focused="true"/>
-    <item android:color="#fff" android:state_hovered="true"/>
-    <item android:color="#fff"/>
+    <item android:color="#dedede" android:state_focused="true"/>
+    <item android:color="#dedede" android:state_hovered="true"/>
+    <item android:color="#dedede"/>
 </selector>
