--- a/app/src/main/res/layout/er_fragment_current_rates.xml
+++ b/app/src/main/res/layout/er_fragment_current_rates.xml
@@ -4,7 +4,9 @@
         xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <import type="android.view.View" />
+
         <variable
                 name="currentRatesViewModel"
                 type="com.bubllbub.exchangerates.viewmodels.CurrentRatesViewModel" />
@@ -39,17 +41,26 @@
                     style="@style/Widget.ExRates.Toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    app:navigationIcon="@drawable/er_backdrop_menu"
-                    app:title="@string/er_app_name" />
+                    app:navigationIcon="@drawable/er_backdrop_menu">
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/menuCurrentRates"
+                        android:layout_gravity="center"
+                        android:textColor="@color/elementsBackground"
+                        android:fontFamily="@font/open_sans_semibold"
+                        android:textSize="18sp"
+                        android:id="@+id/toolbar_title" />
+            </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.core.widget.NestedScrollView
                 android:id="@+id/scroll_view_fragment_first"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="?attr/actionBarSize"
                 android:background="@color/scrollViewBackgroundColor"
                 android:elevation="8dp"
-                android:layout_marginTop="?attr/actionBarSize"
                 android:fillViewport="true"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -62,9 +73,9 @@
                         android:id="@+id/last_update"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="28dp"
+                        android:layout_margin="@dimen/containerMarginDefault"
                         android:background="@drawable/er_update_gradient"
-                        android:padding="16dp"
+                        android:padding="@dimen/itemMarginDefault"
                         android:paddingStart="20dp"
                         android:paddingEnd="20dp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -74,26 +85,27 @@
                     <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/elementsBackground"
-                            android:fontFamily="@font/open_sans_semibold"
-                            android:textSize="14sp"
-                            android:layout_centerInParent="true"
                             android:layout_alignParentStart="true"
-                            android:text="Последние изменения" />
+                            android:layout_centerInParent="true"
+                            android:fontFamily="@font/open_sans_semibold"
+                            android:text="Последние изменения"
+                            android:textColor="@color/elementsBackground"
+                            android:textSize="14sp" />
+
                     <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerInParent="true"
                             android:background="@drawable/er_update_date_bg"
+                            android:fontFamily="@font/open_sans_semibold"
                             android:padding="4dp"
                             android:paddingStart="12dp"
                             android:paddingEnd="12dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/elementsBackground"
-                            android:fontFamily="@font/open_sans_semibold"
-                            android:textSize="14sp"
-                            android:layout_centerInParent="true"
-                            android:layout_alignParentEnd="true"
                             android:text="@{currentRatesViewModel.updateString}"
-                            tools:text="28 july 2019"/>
+                            android:textColor="@color/elementsBackground"
+                            android:textSize="14sp"
+                            tools:text="28 july 2019" />
                 </RelativeLayout>
 
                 <include
@@ -101,7 +113,7 @@
                         layout="@layout/er_main_buttons"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="28dp"
+                        android:layout_marginTop="@dimen/containerMarginDefault"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/last_update" />
@@ -110,9 +122,9 @@
                         android:id="@+id/linearLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="28dp"
-                        android:orientation="vertical"
+                        android:layout_margin="@dimen/containerMarginDefault"
                         android:background="@color/elementsBackground"
+                        android:orientation="vertical"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -122,8 +134,8 @@
                             android:id="@+id/rv_current_rates"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:padding="16dp"
                             android:paddingTop="0dp"
+                            android:paddingBottom="@dimen/itemMarginDefault"
                             android:visibility="@{currentRatesViewModel.isLoading ? View.GONE : View.VISIBLE}"
                             tools:listitem="@layout/rv_item_currency" />
 
@@ -131,17 +143,17 @@
                             android:id="@+id/additionalCurrencyBtn"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="14sp"
-                            android:textAllCaps="false"
-                            app:cornerRadius="40dp"
-                            android:padding="16dp"
+                            android:layout_gravity="center|bottom"
+                            android:layout_marginBottom="@dimen/containerMarginDefault"
+                            android:backgroundTint="@color/dialogButtonColor"
+                            android:fontFamily="@font/open_sans_semibold"
+                            android:padding="@dimen/itemMarginDefault"
                             android:paddingStart="40dp"
                             android:paddingEnd="40dp"
-                            android:backgroundTint="@color/dialogButtonColor"
-                            android:layout_marginBottom="26dp"
-                            android:fontFamily="@font/open_sans_semibold"
                             android:text="Добавить валюту"
-                            android:layout_gravity="center|bottom"/>
+                            android:textAllCaps="false"
+                            android:textSize="14sp"
+                            app:cornerRadius="40dp" />
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
