--- a/app/src/main/res/layout/rv_item_currency.xml
+++ b/app/src/main/res/layout/rv_item_currency.xml
@@ -29,6 +29,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@{currency.symbol}"
+                    android:layout_marginStart="@dimen/itemMarginDefault"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -38,9 +39,9 @@
                     android:id="@+id/currency_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="@dimen/itemMarginDefault"
                     android:fontFamily="@font/open_sans_bold"
-                    android:text="@{currency.curName}"
+                    android:textNameLocale="@{currency}"
                     android:textColor="@color/textDarkGrey"
                     android:textSize="14sp"
                     app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -51,7 +52,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans_semibold"
-                    android:textLocale="@{currency}"
+                    android:textQuotLocale="@{currency}"
                     android:textColor="@color/textLightGrey"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="@+id/currency_name"
@@ -65,6 +66,7 @@
                     android:text="@{Double.toString(currency.curOfficialRate)}"
                     android:textColor="@color/textDarkGrey"
                     android:textSize="18sp"
+                    android:layout_marginEnd="@dimen/itemMarginDefault"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
