--- a/app/src/main/res/layout/rv_item_ingot.xml
+++ b/app/src/main/res/layout/rv_item_ingot.xml
@@ -15,8 +15,7 @@
     <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="0dp"
-            app:cardBackgroundColor="@color/colorPrimary"
+            android:layout_marginBottom="8dp"
             app:cardElevation="0dp"
             app:cardMaxElevation="0dp">
 
@@ -24,75 +23,99 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-            <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@{ingot.symbol}"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/mainIngot"
+                    android:layout_width="match_parent"
+                    android:layout_height="82dp"
+                    android:background="@drawable/er_main_ingot_bg"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                    android:id="@+id/currency_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:text="@{ingot.ingotName}"
-                    android:textColor="#fff"
-                    android:textSize="20sp"
-                    app:layout_constraintHorizontal_bias="0.2"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.083"
-                    tools:text="Gold" />
+                <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@{ingot.symbol}"
+                        android:layout_marginStart="8dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:src="@mipmap/ic_ingot_gold" />
+
+                <TextView
+                        android:id="@+id/currency_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/itemMarginDefault"
+                        android:fontFamily="@font/open_sans_bold"
+                        android:text="@{ingot.ingotName}"
+                        android:textColor="#fff"
+                        android:textSize="18sp"
+                        app:layout_constraintStart_toEndOf="@+id/imageView3"
+                        app:layout_constraintTop_toTopOf="@+id/imageView3"
+                        tools:text="Gold" />
+
+                <TextView
+                        android:id="@+id/currency_nominal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/itemMarginDefault"
+                        android:fontFamily="@font/open_sans_semibold"
+                        android:text="@{String.format(@string/ingotNominalCapacity, ingot.nominal)}"
+                        android:textColor="@color/ingotMainNominal"
+                        android:textSize="14sp"
+                        app:layout_constraintStart_toEndOf="@+id/imageView3"
+                        app:layout_constraintTop_toBottomOf="@+id/currency_name"
+                        tools:text="1 грамм" />
 
 
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:text="@{Double.toString(ingot.ingotCertificateRubles)}"
-                    android:textColor="#fff"
-                    android:textSize="28sp"
-                    app:layout_constraintHorizontal_bias="0.60"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="2.044" />
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="34dp"
+                        android:fontFamily="@font/open_sans_bold"
+                        android:text="@{Double.toString(ingot.ingotCertificateRubles)}"
+                        android:textColor="#fff"
+                        android:textSize="18sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintRight_toLeftOf="@id/ingotNominal"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="2.044" />
 
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:text="@{Double.toString(ingot.ingotEntitiesRubles)}"
-                    android:textColor="#fff"
-                    android:textSize="28sp"
-                    app:layout_constraintHorizontal_bias="0.95"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="3.044" />
+                <TextView
+                        android:id="@+id/ingotNominal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="16dp"
+                        android:fontFamily="@font/open_sans_bold"
+                        android:text="@{Double.toString(ingot.ingotEntitiesRubles)}"
+                        android:textColor="#fff"
+                        android:textSize="18sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/expandableArrow"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="114.49" />
 
-            <ImageView
-                    android:id="@+id/expandableArrow"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/ic_expandable_arrow"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                <ImageView
+                        android:id="@+id/expandableArrow"
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:layout_marginEnd="8dp"
+                        android:src="@drawable/ic_expandable_arrow"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
                     android:descendantFocusability="blocksDescendants"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/currency_name">
+                    app:layout_constraintTop_toBottomOf="@+id/mainIngot">
 
                 <net.cachapa.expandablelayout.ExpandableLayout
                         android:id="@+id/expandableLayout"
