--- a/app/src/main/res/layout/rv_item_small_ingot.xml
+++ b/app/src/main/res/layout/rv_item_small_ingot.xml
@@ -13,7 +13,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="0dp"
-            app:cardBackgroundColor="@color/colorPrimary"
             app:cardElevation="0dp"
             app:cardMaxElevation="0dp">
 
@@ -24,30 +23,40 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:text="@{Double.toString(smallIngot.ingotCertificateRubles)}"
-                    android:textColor="#fff"
-                    android:textSize="24sp"
+                    android:layout_marginStart="74dp"
+                    android:fontFamily="@font/open_sans_semibold"
+                    android:text="@{String.format(@string/ingotNominalCapacity, smallIngot.nominal)}"
+                    android:textColor="@color/textLightGrey"
+                    android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintHorizontal_bias="0.60"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:text="2.044" />
+                    tools:text="1 грамм" />
 
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:text="@{Double.toString(smallIngot.ingotEntitiesRubles)}"
-                    android:textColor="#fff"
-                    android:textSize="24sp"
+                    android:fontFamily="@font/open_sans"
+                    android:text="@{Double.toString(smallIngot.ingotCertificateRubles)}"
+                    android:textColor="@color/textDarkGrey"
+                    android:textSize="16sp"
+                    android:layout_marginEnd="150dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintHorizontal_bias="0.95"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="2.044" />
+
+            <TextView
+                    android:id="@+id/ingotNominal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="60dp"
+                    android:fontFamily="@font/open_sans"
+                    android:text="@{Double.toString(smallIngot.ingotEntitiesRubles)}"
+                    android:textColor="@color/textDarkGrey"
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="3.044" />
         </androidx.constraintlayout.widget.ConstraintLayout>
