--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,7 +40,11 @@
     </style>
 
     <style name="TextAppearance.ExRates.Toolbar" parent="TextAppearance.MaterialComponents.Button">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/open_sans_bold</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginRight">?android:attr/actionBarSize</item>
     </style>
 
     <style name="Widget.ExRates.Backdrop" parent="">
