--- a/app/src/main/res/layout/er_main_buttons.xml
+++ b/app/src/main/res/layout/er_main_buttons.xml
@@ -6,7 +6,7 @@
         android:background="@color/scrollViewBackgroundColor"
         >
 
-    <com.bubllbub.exchangerates.elements.LinearLayoutNavigate
+    <com.bubllbub.exchangerates.ui.widgets.LinearLayoutNavigate
             android:id="@+id/mainButtonFirst"
             android:layout_width="0dp"
             android:layout_height="100dp"
@@ -30,10 +30,10 @@
                 android:textColor="@color/textDarkGrey"
                 android:textSize="12sp"
             android:text="Курсы валют" />
-    </com.bubllbub.exchangerates.elements.LinearLayoutNavigate>
+    </com.bubllbub.exchangerates.ui.widgets.LinearLayoutNavigate>
 
 
-    <com.bubllbub.exchangerates.elements.LinearLayoutNavigate
+    <com.bubllbub.exchangerates.ui.widgets.LinearLayoutNavigate
             android:id="@+id/mainButtonSecond"
             android:layout_width="0dp"
             android:layout_height="100dp"
@@ -55,9 +55,9 @@
                 android:textColor="@color/textDarkGrey"
                 android:textSize="12sp"
                 android:text="График" />
-    </com.bubllbub.exchangerates.elements.LinearLayoutNavigate>
+    </com.bubllbub.exchangerates.ui.widgets.LinearLayoutNavigate>
 
-    <com.bubllbub.exchangerates.elements.LinearLayoutNavigate
+    <com.bubllbub.exchangerates.ui.widgets.LinearLayoutNavigate
             android:id="@+id/mainButtonThird"
             android:layout_width="0dp"
             android:layout_height="100dp"
@@ -81,6 +81,6 @@
                 android:textColor="@color/textDarkGrey"
                 android:textSize="12sp"
                 android:text="Конвертер" />
-    </com.bubllbub.exchangerates.elements.LinearLayoutNavigate>
+    </com.bubllbub.exchangerates.ui.widgets.LinearLayoutNavigate>
 
 </LinearLayout>
