--- a/app/src/main/res/layout/dialog_add_currency.xml
+++ b/app/src/main/res/layout/dialog_add_currency.xml
@@ -32,7 +32,7 @@
                     android:gravity="center"
                     android:textSize="16sp"
                     android:fontFamily="@font/open_sans_semibold"
-                    android:text="Select a currency to add to the list"/>
+                    android:text="@string/dialogTitle"/>
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
@@ -62,6 +62,7 @@
                     android:padding="12dp"
                     android:paddingStart="30dp"
                     android:paddingEnd="30dp"
+                    android:fontFamily="@font/open_sans_semibold"
                     android:backgroundTint="@color/dialogButtonColor"
                     android:text="@string/dialogButtonCancel" />
 
@@ -75,6 +76,7 @@
                     android:padding="12dp"
                     android:paddingStart="30dp"
                     android:paddingEnd="30dp"
+                    android:fontFamily="@font/open_sans_semibold"
                     android:backgroundTint="@color/dialogButtonColor"
                     android:text="@string/dialogButtonOk" />
         </LinearLayout>
