--- a/app/src/main/res/layout/er_fragment_chart_rates.xml
+++ b/app/src/main/res/layout/er_fragment_chart_rates.xml
@@ -107,6 +107,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/chart_label_months_3"
+                            android:fontFamily="@font/open_sans_semibold"
                             android:textAllCaps="false"/>
 
                     <com.google.android.material.button.MaterialButton
@@ -115,6 +116,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/chart_label_months_6"
+                            android:fontFamily="@font/open_sans_semibold"
                             android:textAllCaps="false"/>
 
                     <com.google.android.material.button.MaterialButton
@@ -123,6 +125,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/chart_label_months_12"
+                            android:fontFamily="@font/open_sans_semibold"
                             android:textAllCaps="false"/>
                 </com.google.android.material.button.MaterialButtonToggleGroup>
 
