--- a/app/src/main/res/layout/er_fragment_rate_on_date.xml
+++ b/app/src/main/res/layout/er_fragment_rate_on_date.xml
@@ -122,7 +122,8 @@
                                 android:textSize="16sp"
                                 android:layout_alignParentStart="true"
                                 android:layout_centerInParent="true"
-                                tools:text="28.09.2019"/>
+                                tools:text="28.09.2019"
+                                tools:ignore="RelativeOverlap" />
 
                         <com.google.android.material.button.MaterialButton
                                 android:id="@+id/selectDateButton"
@@ -139,7 +140,8 @@
                                 android:paddingBottom="12dp"
                                 android:paddingLeft="30dp"
                                 android:paddingRight="30dp"
-                                android:text="Select date" />
+                                android:text="@string/rateOnDateButton"
+                                tools:ignore="RelativeOverlap" />
                     </RelativeLayout>
 
                     <View
@@ -172,7 +174,8 @@
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintLeft_toLeftOf="parent"
                                     app:layout_constraintTop_toTopOf="parent"
-                                    tools:src="@mipmap/currency_symbol_usd" />
+                                    tools:src="@mipmap/currency_symbol_usd"
+                                    android:contentDescription="@string/rateOnDateCurrencyIcon" />
 
                             <TextView
                                     android:id="@+id/currency_name"
