--- a/app/src/main/res/layout/rv_dialog_item.xml
+++ b/app/src/main/res/layout/rv_dialog_item.xml
@@ -41,7 +41,8 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:src="@mipmap/currency_symbol_usd" />
+                    tools:src="@mipmap/currency_symbol_usd"
+                    android:contentDescription="@string/dialogIconContentDescription" />
 
             <TextView
                     android:id="@+id/rv_item_dialog_currency_name"
