--- a/app/src/main/res/layout/rv_item_converter.xml
+++ b/app/src/main/res/layout/rv_item_converter.xml
@@ -34,7 +34,7 @@
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:src="@mipmap/currency_symbol_usd"
-                    />
+                    android:contentDescription="@string/converterIconContentDescription" />
 
             <TextView
                     android:id="@+id/currency_name"
@@ -78,7 +78,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="number"
-                        android:hint="Amount"
+                        android:hint="@string/converterTextEditHint"
                         android:fontFamily="@font/open_sans_bold"
                         android:textColor="@color/textDarkGrey"
                         android:text="@{currency.calcAmount}"
