--- a/app/src/main/res/layout/er_fragment_current_rates.xml
+++ b/app/src/main/res/layout/er_fragment_current_rates.xml
@@ -131,6 +131,15 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/include">
 
+                    <androidx.core.widget.ContentLoadingProgressBar
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            style="?android:attr/progressBarStyleLarge"
+                            android:layout_gravity="center_horizontal|center_vertical"
+                            android:visibility="@{currentRatesViewModel.isLoading ? View.VISIBLE : View.GONE}"
+                            tools:visibility="visible"
+                            />
+
                     <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/rv_current_rates"
                             android:layout_width="match_parent"
