--- a/app/src/main/res/layout/er_fragment_ingots.xml
+++ b/app/src/main/res/layout/er_fragment_ingots.xml
@@ -71,9 +71,19 @@
                     android:padding="@dimen/itemMarginDefault"
                     android:paddingTop="42dp">
 
+                <androidx.core.widget.ContentLoadingProgressBar
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="?android:attr/progressBarStyleLarge"
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:visibility="@{ingotsViewModel.isLoading ? View.VISIBLE : View.GONE}"
+                        tools:visibility="visible"
+                        />
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:visibility="@{ingotsViewModel.isLoading ? View.GONE : View.VISIBLE}"
                         android:layout_marginBottom="8dp">
 
                     <TextView
@@ -121,6 +131,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:indeterminate="true"
+                        android:visibility="@{ingotsViewModel.isLoading ? View.GONE : View.VISIBLE}"
                         tools:listitem="@layout/rv_item_ingot" />
             </LinearLayout>
 
